--- a/backend/package.json
+++ b/backend/package.json
@@ -1,21 +1,31 @@
 {
-  "name": "backend",
+  "name": "precision-resume-mentor-backend",
   "version": "1.0.0",
+  "description": "Backend for Precision Resume Mentor",
   "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"No tests specified\" && exit 0"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
+    "@google/generative-ai": "^0.19.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "mongoose": "^7.6.3",
-    "openai": "^5.23.1"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "mongoose": "^8.7.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
-  }
+    "nodemon": "^3.1.10"
+  },
+  "keywords": [
+    "resume",
+    "ai",
+    "gemini",
+    "mongodb"
+  ],
+  "author": "Your Name",
+  "license": "MIT"
 }
